--- a/carrinho.html
+++ b/carrinho.html
@@ -73,7 +73,9 @@
 
 
     <footer class="footer">
-        <p>Desenvolvido por <a href="#">Leandro Ribeiro</a>, <a href="#">Marília Pinheiro Alves</a> e <a href="#">Rayane
+        <p>Desenvolvido por <a href="https://github.com/LeandroRibeiroCode" target="_blank">Leandro Ribeiro</a>, <a
+                href="https://github.com/MariliaPinheiroAlves" target="_blank">Marília Pinheiro Alves</a> e <a
+                href="https://github.com/raayrs4" target="_blank">Rayane
                 Santos.</a></p>
     </footer>
     <script src="./js/carrinho.js"></script>
