--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <span><a href="index.html">Zobina</a></span>
         <ul class="nav-links">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="carrinho.html">Collection</a></li>
+            <li class="btn-carrinho"><a href="carrinho.html">Buy now</a><i class="fas fa-shopping-bag"></i></li>
         </ul>
     </nav>
 
